# fanta5y-bot

./: .env.prod  .gitignore  README.md  pyproject.toml
myScript/: setEnv.py
plugins/acm_helper/: __init__.py  handler.py
plugins/acm_helper/OJ_helper/: OJ_helper.py  __init__.py  codeforces_helper.py  helper.py  luogu_helper.py  userinfo.py
plugins/acm_helper/OJ_helper/helpers/: OJ_helper.py  __init__.py  atcoder_helper.py  codeforces_helper.py  luogu_helper.py  nk_helper.py
plugins/acm_helper/OJ_helper/infoClass/: __init__.py  contestInfo.py  problemInfo.py  prombleInfo.py  userInfo.py  userinfo.py
plugins/acm_helper/helper/: codeforces_helper.py  helper.py  luogu_helper.py
plugins/kobe/: __init__.py
plugins/self_intro/: __init__.py
plugins/weather/: __init__.py
